--- a/Kuber/11-microservices-02-principles/docker-compose.yaml
+++ b/Kuber/11-microservices-02-principles/docker-compose.yaml
@@ -10,10 +10,14 @@ services:
     restart: always
     expose: 
       - 9000
+      - 8087
     environment:
       MINIO_ROOT_USER: ${Storage_AccessKey:-STORAGE_ACCESS_KEY}
       MINIO_ROOT_PASSWORD: ${Storage_Secret:-STORAGE_SECRET_KEY}
       MINIO_PROMETHEUS_AUTH_TYPE: public
+      MINIO_CONSOLE_ADDRESS: ":8087"
+    ports:
+       - "8087:8087"
     volumes:
       - data:/data
     healthcheck:
@@ -28,10 +32,10 @@ services:
       - storage
     restart: on-failure
     entrypoint: > 
-      /bin/sh -c "      
+      /bin/sh -c "     
       /usr/bin/mc config host add storage http://storage:9000 ${Storage_AccessKey-STORAGE_ACCESS_KEY} ${Storage_Secret-STORAGE_SECRET_KEY} &&
-      /usr/bin/mc mb --ignore-existing storage/${Storage_Bucket:-data} &&
-      /usr/bin/mc policy set download storage/${Storage_Bucket:-data} &&
+      /usr/bin/mc mb --ignore-existing storage/${Storage_Bucket:-images} &&
+      /usr/bin/mc policy set public storage/${Storage_Bucket:-images} &&
       exit 0;
       "
 
@@ -49,7 +53,7 @@ services:
       S3_ACCESS_KEY: ${Storage_AccessKey:-STORAGE_ACCESS_KEY}
       S3_ACCESS_SECRET: ${Storage_Secret:-STORAGE_SECRET_KEY}
       S3_BUCKET: ${Storage_Bucket:-STORAGE_BUCKET}
-  
+
   security:
     build: ./security
     expose: 
@@ -62,7 +66,7 @@ services:
     volumes:
       - ./gateway/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
-      - "80:8080"      
+      - "80:80"
     depends_on:
       - storage
       - uploader
