--- a/Kuber/11-microservices-02-principles/gateway/nginx.conf
+++ b/Kuber/11-microservices-02-principles/gateway/nginx.conf
@@ -1,29 +1,39 @@
-#####TODO[MT]: implement nginx config
-http {
-
-  server {
-    listen 80;
-    server_name 127.0.0.1;
-
-    ##### security
-    
-    location ~ /v1/token(|/validation) {
-      proxy_pass http://security:3000;
-    }  
-    
-    ##### uploader
-
-    location /v1/upload {
-      auth_request /v1/token/validation;
-      proxy_pass http://uploader:3000;
-    }
-
-    location /images {
-      auth_request /v1/token/validation;
-      proxy_pass http://storage:9000;
-    }  
-  }
+events {
+    worker_connections 1024;
+    multi_accept on;
 }
 
-events {
+http {
+    server {
+        listen 80;
+
+        location /register {
+            proxy_pass http://security:3000/v1/user;
+        }
+        location /token {
+            proxy_pass http://security:3000/v1/token;
+        }
+
+        location /user {
+            auth_request /auth;
+            proxy_pass http://security:3000/v1/user;
+        }
+
+        location /upload {
+            auth_request /auth;
+            proxy_pass http://uploader:3000/v1/upload;
+        }
+
+        location /images/ {
+            proxy_pass http://storage:9000/data/;
+        }
+
+        location /auth {
+            internal;
+            proxy_pass              http://security:3000/v1/token/validation;
+            proxy_pass_request_body off;
+            proxy_set_header        Content-Length "";
+            proxy_set_header        X-Original-URI $request_uri;
+        }
+    }
 }
