--- a/Kuber/11-microservices-02-principles/security/requirements.txt
+++ b/Kuber/11-microservices-02-principles/security/requirements.txt
@@ -1,5 +1,8 @@
 Flask==1.1.1
 PyJwt==2.0.1
 passlib==1.7.4
-PyJWT==2.0.1
 prometheus-flask-exporter==0.18.1
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+itsdangerous==2.0.1
+Werkzeug==2.0.1
